# sand

./: .gitignore  .gitlab-ci.yml  Calculus-soundness.md  Calculus.md  Cargo.toml  README.md  TypeSystemPlan.md  grammar.pest  lsp_wrapper.sh  summary.md  summary.toml
demo/: .gitignore
demo/queries/: highlights.scm  indents.scm  locals.scm
examples/: RSA.kap  RSA.sand  ackermann.sand  borrowing.sand  clone_copy.sand  complex.kap  complex.sand  divergence.sand  doubling.sand  dup_param.sand  exhaustiveness.sand  expr.sand  fact.kap  fact.sand  fact.u  fib.kap  fib.sand  fib.u  gcd.kap  gcd.sand  generic_id.sand  generic_option.sand  gt3.kap  gt3.sand  inner_empty.sand  invalid.kap  invalid.sand  let_pattern.sand  lists.sand  lists2.sand  maybe.sand  mut_references.sand  mutable_borrows.sand  nested.sand  nested_exhaustiveness.sand  operators.sand  prime.kap  prime.sand  ptr_substrate.sand  references.sand  (+17 more)
examples/box/: fib.ll  fib.sand
examples/fmt/: edge_cases.sand  long_expressions.sand  long_names.sand  many_params.sand  nesting.sand  stress.sand
examples/invalid/: complex.sand  invalid.sand
lang/: Cargo.toml
lang/src/: core.sand  lib.rs
lang/src/analysis/: annotate.rs  cfg.rs  interactions.rs  mod.rs
lang/src/castles/: config.rs  discovery.rs  fileutils.rs  mod.rs
lang/src/castles/project/: init.rs  mod.rs
lang/src/compiler/: mod.rs  optics.rs
lang/src/compiler/context/: compile.rs  project.rs
lang/src/compiler/diagnostics/: mod.rs  render.rs
lang/src/compiler/diagnostics/convert/: ast.rs  mod.rs  ownership.rs  qualify.rs  setup.rs  typecheck.rs  uniquify.rs
lang/src/compiler/structure/: enums.rs  functions.rs  mod.rs  projects.rs  type_params.rs  typeclasses.rs  variables.rs
lang/src/compiler/tests/: mod.rs  module_ref.rs  project_ctx.rs
lang/src/interpreter/: mir.rs  mod.rs  typed_hir.rs
lang/src/ir_types/: hhir.rs  mir.rs  mod.rs  qhir.rs  typed_hir.rs
lang/src/ir_types/display/: ast.rs  mir.rs  mod.rs  prog.rs  typed_expr.rs
lang/src/lang/: intrinsics.rs  ops.rs  types.rs
lang/src/passes/: build_ast.rs  heap_lower.rs  llvm_codegen.rs  mod.rs  mono.rs  parse.rs
lang/src/passes/explicate_control/: context.rs  mod.rs
lang/src/passes/ownership/: env.rs  errors.rs  mod.rs
lang/src/passes/qualify/: error.rs  mod.rs
lang/src/passes/qualify/uniquify/: error.rs  mod.rs
lang/src/passes/type_ast/: check.rs  check_intrinsic.rs  errors.rs  generics.rs  infer.rs  mod.rs  type_check.rs
lang/src/util/: bugs.rs  constants.rs  error_ctx.rs  traits.rs
lang/src/util/fs/: error.rs  mod.rs  real_fs.rs
live_demo/: RSA.kap  rsa_demo.kap
sand-cli/: Cargo.toml
sand-cli/src/: compile.rs  error.rs  fmt.rs  main.rs
sand-lsp/: Cargo.toml
sand-lsp/src/: annotate.rs  backend.rs  goto_definition.rs  hover.rs  lsp.rs  main.rs  protocol.rs  util.rs
sand-lsp/src/diagnostics/: mod.rs
src/: annotate.rs  ast.rs  cfg.rs  grammar.pest  interactions.rs  interpret.rs  lang.rs  lib.rs  main.rs  parse.rs  reserved.rs  traits.rs  uniquify.rs
src/analysis/: annotate.rs  cfg.rs  interactions.rs  mod.rs
src/castles/: config.rs  mod.rs
src/compiler/: context.rs  mod.rs
src/interpreter/: mir.rs  mod.rs  typed_hir.rs
src/ir_types/: ast.rs  cfgmir.rs  hhir.rs  mod.rs  ops.rs  qhir.rs  ssa.rs  typed_ast.rs  typed_hir.rs  types.rs
src/lang/: intrinsics.rs  mod.rs  structure.rs  types.rs
src/lsp/: annotate.rs  ast.rs  backend.rs  config.rs  files.rs  lsp.rs  main.rs  mod.rs  protocol.rs  typecheck.rs  uniquify.rs  util.rs
src/passes/: build_ast.rs  mod.rs  parse.rs
src/sand/: compile.rs  error.rs  main.rs
src/util/: bugs.rs  error_ctx.rs  mod.rs  traits.rs
tests/: Cargo.toml  build.rs  cfg_interactions_integration_tests.rs  compiler_logic.rs  correct_programs.rs  fact.rs  fail_parse.rs  fib.rs  hir_tests.rs  infra.rs  interactions_test.rs  lib.rs  mir_tests.rs  uniquify_cfg_integrations.rs  uniquify_consistent.rs  uniquify_test.rs
tests/agreement_tests/: hir_mir_agreement.rs  mod.rs
tests/common/: mod.rs
tests/examples/: fact.rs  fib.rs  setup.rs
tests/integration_tests/: examples.rs  mod.rs  multi_file.rs
treesitter/: grammar.js  sand.sublime-syntax  tree-sitter.json
(+133 files in other folders)
