[package]
name = "sand"
version = "0.1.0"
edition = "2024"
default-run = "debug"

[[bin]]
name = "sand"
path = "src/sand/main.rs"

# integration tests under tests/ directory

[dependencies]
anyhow = "1"
pest = "2.8.4"
pest_derive = "2.8.4"
petgraph = "0.8.3"
take-if = "1"
thiserror = "2"
tower-lsp = "0.20.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "fs"] }
toml = "1"
serde = "1.0.228"
bimap = "0.6.3"
inkwell = { version = "0.8.0", features = ["llvm21-1"] }
clap = { version = "4.6.1", features = ["derive"] }
anstyle = "1.0.14"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
shellexpand = { version = "3", default-features = false, features = ["base-0", "tilde"] }
url = "2"
proptest = "1.11.0"

[features]
testing = []
