[workspace]
members = [
    "lang",
    "sand-cli",
    "sand-lsp",
    "tests"
]
resolver = "2"

# shared dependencies
[workspace.dependencies]
anyhow = "1"
bimap = "0.6.3"
thiserror   = "2"
tracing     = "0.1.44"
pest        = "2.8.4"
pest_derive = "2.8.4"
url         = { version = "2", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio       = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "fs"] }
toml        = "1"
inkwell     = { version = "0.8.0", features = ["llvm21-1"] }
tracing-subscriber = "0.3.23"
shellexpand = { version = "3", default-features = false, features = ["base-0", "tilde"] }
