[package]
name = "lang"
version = "0.1.0"
edition = "2024"
default-run = "debug"

[dependencies]
anstyle = "1.0.14"
anyhow = { workspace = true }
bimap.workspace = true
glob = "0.3.3"
im = { workspace = true }
inkwell.workspace = true
pest = { workspace = true }
pest_derive = { workspace = true }
petgraph = "0.8.3"
serde.workspace = true
shellexpand.workspace = true
thiserror = { workspace = true }
tokio = { workspace = true }
toml.workspace = true
tracing = { workspace = true }
tracing-subscriber.workspace = true
url = { workspace = true }
