[package]
name = "sand-cli"
version = "0.1.0"
edition = "2024"


[dependencies]
lang = { path = "../lang" }
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
inkwell.workspace = true
clap = { version = "4.6.1", features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
shellexpand.workspace = true
url.workspace = true
