[package]
name = "sand-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
lang = { path = "../lang" }
anyhow.workspace = true
thiserror = { workspace = true }
tower-lsp = "0.20.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber.workspace = true
url = { workspace = true }
